--- a/catalog.html
+++ b/catalog.html
@@ -363,13 +363,13 @@
         </h2>
         <ul class="footer-menu-list">
           <li class="footer-menu-item">
-            <a href="">Доставка</a>
+            <a class="footer-menu-link" href="#">Доставка</a>
           </li>
           <li class="footer-menu-item">
-            <a href="#">Гарантия</a>
+            <a class="footer-menu-link" href="#">Гарантия</a>
           </li>
           <li class="footer-menu-item">
-            <a href="#">Контакты</a>
+            <a class="footer-menu-link" href="#">Контакты</a>
           </li>
       </ul>
       </section>
@@ -386,16 +386,6 @@
     <ul class="social-list">
       <li class="social-item">
         <a class="social-link" href="https://t.me/htmlacademy">
-          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" viewBox="0 0 14 12" fill="none">
-            <g clip-path="url(#clip0_19415_1305)">
-              <path d="M12.4431 0.0735832L0.623071 4.63158C-0.183596 4.95558 -0.178929 5.40558 0.475071 5.60625L3.50974 6.55292L10.5311 2.12292C10.8631 1.92092 11.1664 2.02958 10.9171 2.25092L5.2284 7.38492H5.22707L5.2284 7.38558L5.01907 10.5136C5.32574 10.5136 5.46107 10.3729 5.63307 10.2069L7.10707 8.77358L10.1731 11.0382C10.7384 11.3496 11.1444 11.1896 11.2851 10.5149L13.2977 1.02958C13.5037 0.203583 12.9824 -0.170417 12.4431 0.0735832Z" fill="#444444"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_19415_1305">
-                <rect width="14" height="12" fill="white"/>
-              </clipPath>
-            </defs>
-          </svg>
           <span class="visually-hidden">
             Телеграм
           </span>
@@ -403,16 +393,6 @@
       </li>
       <li class="social-item">
         <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="11" viewBox="0 0 16 11" fill="none">
-            <g clip-path="url(#clip0_19415_1383)">
-              <path d="M15.6671 1.67464C15.5765 1.35146 15.4 1.05887 15.1564 0.827973C14.9059 0.589975 14.5989 0.41973 14.2644 0.333306C13.0124 0.00330585 7.99641 0.00330593 7.99641 0.00330593C5.9053 -0.0204856 3.8147 0.0841556 1.73641 0.316639C1.40187 0.409448 1.09545 0.583497 0.844411 0.823306C0.597745 1.06064 0.419078 1.35331 0.325745 1.67397C0.10154 2.8818 -0.00739387 4.1082 0.000411455 5.33664C-0.00758854 6.56397 0.101078 7.78997 0.325745 8.99931C0.417078 9.31864 0.595078 9.60997 0.842411 9.84531C1.08974 10.0806 1.39774 10.2506 1.73641 10.3406C3.00508 10.67 7.99641 10.67 7.99641 10.67C10.0902 10.6938 12.1835 10.5892 14.2644 10.3566C14.5989 10.2702 14.9059 10.1 15.1564 9.86197C15.3999 9.63112 15.5762 9.33849 15.6664 9.01531C15.8965 7.80794 16.0083 6.58103 16.0004 5.35197C16.0177 4.11771 15.906 2.88502 15.6671 1.67397V1.67464ZM6.40174 7.61931V3.05464L10.5751 5.33731L6.40174 7.61931Z" fill="#444444"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_19415_1383">
-                <rect width="16" height="11" fill="white"/>
-              </clipPath>
-            </defs>
-          </svg>
           <span class="visually-hidden">
             Youtube
           </span>
@@ -420,10 +400,6 @@
       </li>
       <li class="social-item">
         <a class="social-link" href="https://twitter.com/htmlacademy_ru">
-          <svg xmlns="http://www.w3.org/2000/svg" width="42" height="40" viewBox="0 0 42 40" fill="none">
-            <circle cx="20" cy="20" r="20" fill="white" fill-opacity="0.3"/>
-            <path d="M23.7 13.1551C25.2 12.6551 26.3 13.4551 26.9 14.2551C27.4 14.0551 28 13.8551 28.6 13.6551C28.6 14.4551 28.1 15.0551 27.8 15.2551C28.5 15.4551 29 14.8551 29 14.8551C28.9 15.7551 28.1 16.5551 27.6 16.7551C27.4 23.0551 24.8 27.1551 18.7 27.0551C18.2 27.0551 18.8 27.0551 18.3 27.0551C18 27.0551 14.6 26.6551 14 25.2551C16 25.4551 17.4 24.8551 18.1 24.1551C17.3 23.8551 15.7 23.7551 15.5 21.3551C15.8 21.5551 16 21.6551 16.6 21.5551C15.5 20.7551 14.3 20.0551 14.4 18.0551C14.7 18.3551 15.3 18.5551 15.6 18.4551C15 18.2551 13.8 15.3551 14.8 13.8551C16.4 15.5551 18.1 17.2551 21.1 17.3551C21.3 15.2551 22.1 13.8551 23.7 13.1551Z" fill="#444444"/>
-          </svg>
           <span class="visually-hidden">
             Twitter
           </span>
