--- a/index.html
+++ b/index.html
@@ -96,16 +96,18 @@
             <li class="slider-item slider-item-current">
               <div class="slider-image-wrapper">
                 <img class="slider-image" src="images/index/slider-1.png" width="560" height="560" alt="Квадрокоптер.">
-                <button class="slider-button slider-prev">
-                  <span class="visually-hidden">
-                    Предыдущий слайд.
-                  </span>
-                </button>
-                <button class="slider-button slider-next">
-                  <span class="visually-hidden">
-                    Следующий слайд.
-                  </span>
-                </button>
+                <div class="slider-button-wrapper">
+                  <button class="slider-button slider-prev">
+                    <span class="visually-hidden">
+                      Предыдущий слайд.
+                    </span>
+                  </button>
+                  <button class="slider-button slider-next">
+                    <span class="visually-hidden">
+                      Следующий слайд.
+                    </span>
+                  </button>
+                </div>
               </div>
               <div class="slider-description-wrapper">
                 <h3 class="slider-title title">
@@ -140,16 +142,18 @@
             <li class="slider-item">
               <div class="slider-image-wrapper">
                 <img class="slider-image" src="images/index/slider-2.png" width="560" height="560" alt="Фитнес-браслеты.">
-                <button class="slider-button slider-prev">
-                  <span class="visually-hidden">
-                    Предыдущий слайд.
-                  </span>
-                </button>
-                <button class="slider-button slider-next">
-                  <span class="visually-hidden">
-                    Следующий слайд.
-                  </span>
-                </button>
+                <div class="slider-button-wrapper">
+                  <button class="slider-button slider-prev">
+                    <span class="visually-hidden">
+                      Предыдущий слайд.
+                    </span>
+                  </button>
+                  <button class="slider-button slider-next">
+                    <span class="visually-hidden">
+                      Следующий слайд.
+                    </span>
+                  </button>
+                </div>
               </div>
               <div class="slider-description-wrapper">
                 <h3 class="slider-title title">
@@ -176,16 +180,18 @@
             <li class="slider-item">
               <div class="slider-image-wrapper">
                 <img class="slider-image" src="images/index/slider-3.png" width="560" height="560" alt="Палка для селфи.">
-                <button class="slider-button slider-prev">
-                  <span class="visually-hidden">
-                    Предыдущий слайд.
-                  </span>
-                </button>
-                <button class="slider-button slider-next">
-                  <span class="visually-hidden">
-                    Следующий слайд.
-                  </span>
-                </button>
+                <div class="slider-button-wrapper">
+                  <button class="slider-button slider-prev">
+                    <span class="visually-hidden">
+                      Предыдущий слайд.
+                    </span>
+                  </button>
+                  <button class="slider-button slider-next">
+                    <span class="visually-hidden">
+                      Следующий слайд.
+                    </span>
+                  </button>
+                </div>
               </div>
               <div class="slider-description-wrapper">
                 <h3 class="slider-title title">
@@ -474,21 +480,21 @@
           </ul>
           <ul class="social-list">
             <li class="social-item">
-              <a class="social-link" href="https://t.me/htmlacademy">
+              <a class="social-link social-link-telegram" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">
                   Телеграм.
                 </span>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">
                   Youtube
                 </span>
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="https://twitter.com/htmlacademy_ru">
+              <a class="social-link social-link-twitter" href="https://twitter.com/htmlacademy_ru">
                 <span class="visually-hidden">
                   Twitter.
                 </span>
