--- a/catalog.html
+++ b/catalog.html
@@ -310,7 +310,7 @@
                   </a>
                 </li>
               </ul>
-              <a class="download-butter" href="#">
+              <a class="download-button" href="#">
                 Загрузить ещё
               </a>
 
