Декоративные элементы главной страницы
В шапке еще не сделано выпадающее меню и декоративные изображения к кнопкам

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                   </button>
                 </div>
               </div>
-              <div class="slider-description-wrapper">
+              <div class="slider-description-wrapper slider-own">
                 <h3 class="slider-title title">
                   Порхает как бабочка, жалит как пчела!
                 </h3>
                 <p class="slider-text">
                   Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
                 </p>
-                <a class="slider-link" href="#">
+                <a class="slider-link button" href="#">
                   Подробнее
                 </a>
                 <ul class="slider-info">
@@ -155,14 +155,14 @@
                   </button>
                 </div>
               </div>
-              <div class="slider-description-wrapper">
+              <div class="slider-description-wrapper slider-two">
                 <h3 class="slider-title title">
                   Худеем правильно!
                 </h3>
                 <p class="slider-text">
                   Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
                 </p>
-                <a class="slider-link" href="#">
+                <a class="slider-link button" href="#">
                   Подробнее
                 </a>
                 <ul class="slider-info">
@@ -193,14 +193,14 @@
                   </button>
                 </div>
               </div>
-              <div class="slider-description-wrapper">
+              <div class="slider-description-wrapper slider-three">
                 <h3 class="slider-title title">
                   Делай селфи, как Бен Стиллер!
                 </h3>
                 <p class="slider-text">
                   Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
                 </p>
-                <a class="slider-link" href="#">
+                <a class="slider-link button" href="#">
                   Подробнее
                 </a>
                 <ul class="slider-info">
@@ -260,32 +260,32 @@
           </h2>
           <ul class="catalog-main-list">
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-virtual" href="#">
                 Виртуальная реальность
               </a>
             </li>
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-monopod" href="#">
                 Моноподы для селфи
               </a>
             </li>
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-camera" href="#">
                 Экшн-камеры
               </a>
             </li>
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-fitness" href="#">
                 Фитнес-браслеты
               </a>
             </li>
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-smart-watch" href="#">
                 Умные часы
               </a>
             </li>
             <li class="catalog-main-item">
-              <a class="catalog-main-link" href="#">
+              <a class="catalog-main-link catalog-quadcopter" href="#">
                 Квадрокоптеры
               </a>
             </li>
@@ -301,13 +301,13 @@
 
           <ol class="services-list">
             <li class="services-item services-active">
-              <button class="services-button services-button-active" type="button">Доставка</button>
+              <button class="services-button services-button-active button" type="button">Доставка</button>
             </li>
             <li class="services-item">
-              <button class="services-button" type="button">Гарантия</button>
+              <button class="services-button button" type="button">Гарантия</button>
             </li>
             <li class="services-item">
-              <button class="services-button" type="button">Кредит</button>
+              <button class="services-button button" type="button">Кредит</button>
             </li>
           </ol>
 
@@ -387,7 +387,7 @@
               </li>
             </ul>
 
-            <a class="about-detail" href="#">
+            <a class="about-detail button" href="#">
               Подробнее о нас
             </a>
 
@@ -420,7 +420,7 @@
               <li class="contacts-schedule-item">
                 сб—вс: с 10:00 до 19:00</li>
             </ul>
-            <a class="contacts-letter" href="#">
+            <a class="contacts-letter button" href="#">
               Напишите нам
             </a>
           </article>
