Созданы поповер и модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -39,6 +39,45 @@
                 </span>
                 Корзина
               </a>
+              <!-- Popover -->
+             <div class="popover popover-cart">
+                <div class="popover-content">
+                  <h2 class="visually-hidden">Корзина</h2>
+                  <ul class="cart-items-list list-reset">
+                    <li class="cart-item">
+                      <a class="cart-link" href="#">
+                        <img class="cart-image" src="images/catalog/basket-amateur.jpg"
+                          alt="Любительская селфи-палка." width="39" height="43">
+                        <h3 class="cart-name">Любительская селфи-палка</h3>
+                      </a>
+                      <button class="cart-button">
+                        <span class="visually-hidden">Удалить из корзины.</span>
+                      </button>
+                    </li>
+                    <li class="cart-item">
+                      <a class="cart-link" href="#">
+                        <img class="cart-image" src="images/catalog/basket-professional.jpg"
+                          alt="Профессиональная селфи-палка." width="39" height="43">
+                        <h3 class="cart-name">Профессиональная селфи-палка</h3>
+                      </a>
+                      <button class="cart-button">
+                        <span class="visually-hidden">Удалить из корзины.</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="cart-wrapper">
+                    <p class="cart-text">
+                      Товаров:
+                      <span class="cart-count">2</span>
+                    </p>
+                    <p class="cart-text">
+                      Сумма:
+                      <span class="cart-price">2000 ₽</span>
+                    </p>
+                  </div>
+                  <a class="popover-open-button" href="#">Открыть корзину</a>
+                </div>
+              </div>
             </li>
         </ul>
         <!-- Основная навигация с выпадающим подменю-->
